# distributed-ai

./: .gitignore  README.md  client.py  engine.py  frontend.py  pyproject.toml  server.py  test.ipynb
.streamlit/: config.toml
data/: dummy.csv  fake_steuerdaten.csv  fake_steuerdaten_0.csv  fake_steuerdaten_1.csv  fake_steuerdaten_2.csv  fake_steuerdaten_labels_not_random.csv  fake_steuerdaten_labels_not_random_no_date.csv  fake_steuerdaten_labels_not_random_no_names.csv
notebooks/: test.ipynb  test_fake_data.ipynb
src/: run_train.py
src/civiclink/: utils.py
src/civiclink/FTTransformer/: run_train.py
src/civiclink/FTTransformer/pipeline/: dataset.py  early_stopping.py  engine.py
src/civiclink/XGBoost/: main.py
src/civiclink/flower/: client.py  server.py
src/civiclink/pipeline/: main.py  model.py
src/flower/: client.py  server.py
src/pipeline/: dataset.py  engine.py  model.py
src/scripts/: add_names_and_dates_to_csv.py  add_names_to_csv.py  create_fake_data.py  create_fake_data_v2.py  get_typical_input_per_label.py
