[project]
name = "civiclink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr>=1.23.0",
    "huggingface-hub>=1.1.4",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "xgboost>=3.1.1",
]

[tool.uv]
package = true
