[project]
name = "civiclink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=38.0.0",
    "flwr>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "huggingface-hub>=1.1.4",
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "xgboost>=3.1.1",
]

[tool.uv]
package = true
